tests/data/negative/test_cast_data_prim.orb
data Foo {
    i32 x;
}

fnc main() {
    Foo f;
    (i32(f));
}